[BC-312] Update api handling of missing state (#1471)